ContainerDeployScripts/gke/deployService.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptosubscribervertx-service
spec:
  type: NodePort
  ports:
    - port: 8888
      #nodePort: 30390
      protocol: TCP
      targetPort: 8888
  selector:
    app: cryptosubscribervertx
---
