ContainerDeployScripts/gke/deployIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cryptomarketdata-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"

spec:
  rules:
    - http:
        paths:
          - path: /subscription/*
            backend:
              serviceName: cryptosubscribervertx-service
              servicePort: 8888
